force-app/main/default/objects/Role__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <description>Driver Safety attribute to RRD CustomPoint as part of the SSO login.</description>
    <label>Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>ADS Itemized Approver - Lvl 1</fullName>
            </value>
            <value>
                <fullName>State Coordinator</fullName>
            </value>
            <value>
                <fullName>Deputy State Coordinator</fullName>
            </value>
            <value>
                <fullName>Zone Coordinator</fullName>
            </value>
            <value>
                <fullName>District Coordinator</fullName>
            </value>
            <value>
                <fullName>Interim State Coordinator</fullName>
            </value>
            <value>
                <fullName>National Coordinator</fullName>
            </value>
            <value>
                <fullName>National Advisor</fullName>
            </value>
            <value>
                <fullName>Chief Trainer</fullName>
            </value>
            <value>
                <fullName>Tech Advisor</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Analyst Advisor</fullName>
            </value>
            <value>
                <fullName>Marketing Specialist</fullName>
            </value>
            <value>
                <fullName>Master Instructor</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Instructor - Universal Registration</fullName>
            </value>
            <value>
                <fullName>Instructor-Spanish</fullName>
            </value>
            <value>
                <fullName>Instructor-Chinese</fullName>
            </value>
            <value>
                <fullName>Telephone Coordinator</fullName>
            </value>
            <value>
                <fullName>Telephone Coordinator – Spanish</fullName>
            </value>
            <value>
                <fullName>Course Administrator</fullName>
            </value>
            <value>
                <fullName>CarFit Coordinator</fullName>
            </value>
            <value>
                <fullName>CarFit Event Coordinator</fullName>
            </value>
            <value>
                <fullName>CarFit Instructor</fullName>
            </value>
            <value>
                <fullName>CarFit Technician</fullName>
            </value>
            <value>
                <fullName>WNTT Coordinator</fullName>
            </value>
            <value>
                <fullName>WNTT Facilitator</fullName>
            </value>
            <value>
                <fullName>Regional Coordinator</fullName>
            </value>
            <value>
                <fullName>Administration Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>