force-app/main/default/objects/Role__c/fields/Flat_Rate_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Accounting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the accounting code used when this role requests a flat rate reimbursement.</description>
    <inlineHelpText>Search for and select the accounting code string to which a flat rate requested by this role should be charged.</inlineHelpText>
    <label>Flat Rate Accounting Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Accounting_Code__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Accounting_Code__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>