force-app/main/default/objects/Role__c/fields/Flat_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Amount__c</fullName>
    <description>The permitted amount a member of this role may request on a flat rate reimbursement</description>
    <inlineHelpText>The permitted amount a member of this role may request on a flat rate reimbursement</inlineHelpText>
    <label>Flat Rate Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>