force-app/main/default/objects/Role__c/fields/Flat_Rate_Funding_Code__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Funding_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Captures the funding code used when this role requests a flat rate reimbursement.</description>
    <inlineHelpText>Search for and select the funding code string to which a flat rate requested by this role should be charged.</inlineHelpText>
    <label>Flat Rate Funding Code</label>
    <referenceTo>Funding_Code__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>