force-app/main/default/objects/Role__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the enterprise level program this role is related to.</description>
    <inlineHelpText>Enter an enterprise-level program.</inlineHelpText>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Program must be an enterprise-level program.</errorMessage>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>