force-app/main/default/objects/Role__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>The purpose and objectives of this volunteer position.</description>
    <inlineHelpText>Enter objectives and the purpose of this volunteer position.</inlineHelpText>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>