force-app/main/default/objects/Role__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <description>Position qualifications.</description>
    <inlineHelpText>What qualifications are needed for this position?</inlineHelpText>
    <label>Qualifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>