force-app/main/default/objects/Role__c/fields/Tax_Aide_Leadership_Role__c.field-meta.xml
<CustomField>
    <fullName>Tax_Aide_Leadership_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used by Tax-Aide only to denote a leadership role.</description>
    <inlineHelpText>Flag used by Tax-Aide only to denote a leadership role.</inlineHelpText>
    <label>Tax-Aide Leadership Role</label>
    <type>Checkbox</type>
</CustomField>