force-app/main/default/objects/Role__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <description>Training requirements for position.</description>
    <inlineHelpText>What training is required/provided for this position?</inlineHelpText>
    <label>Training</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>