force-app/main/default/objects/Role__c/listViews/Foundation.listView-meta.xml
<ListView>
    <fullName>Foundation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Foundation</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Matt Fragale</value>
    </filters>
    <label>Foundation</label>
</ListView>